Try to make matching on `Fin 1` work